Add controllers sample

--- a/sample/GettingStarted/GettingStarted.fsproj
+++ b/sample/GettingStarted/GettingStarted.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="ReactiveProperties.fs" />
     <Compile Include="Styles.fs" />
     <Compile Include="Event.fs" />
+    <Compile Include="Controllers.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
