--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@lit/context": "^1.1.2",
     "lit": "^3.2.0"
   },
   "devDependencies": {
