--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="Fable.Browser.Css" Version="2.5.0" />
     <PackageVersion Include="Fable.Browser.Dom" Version="2.17.0" />
     <PackageVersion Include="Fable.Core" Version="4.3.0" />
+    <PackageVersion Include="Fable.Package.SDK" Version="1.3.2" />
     <PackageVersion Include="FSharp.Core" Version="8.0.400" />
     <PackageVersion Include="FSharp.Data.LiteralProviders" Version="1.0.3" />
   </ItemGroup>
